--- a/exploratory_rmd.Rmd
+++ b/exploratory_rmd.Rmd
@@ -10,10 +10,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Introduction
-
-
-
-Required Libraries
+The .rmd file for my exploratory data analysis.
+Loading required Libraries
 ```{r libraries, results= "hide", message=F, warning=F}
 library(tidyverse)
 library(ggmap)
